[package]
name = "serde-smile"
version = "0.1.0"
edition = "2018"
exclude = ["jackson"]

[dependencies]
byteorder = "1"
itoa = { version = "0.4", features = ["i128"] }
memchr = "2"
serde = "1"

[dev-dependencies]
base64 = "0.13"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
