[package]
name = "serde-smile"
version = "0.1.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sfackler/serde-smile"
keywords = ["smile", "serde", "serialization"]
categories = ["encoding"]
exclude = ["jackson"]
edition = "2018"

[dependencies]
itoa = { version = "0.4", features = ["i128"] }
memchr = "2"
serde = "1"
serde_bytes = "0.11"

[dev-dependencies]
base64 = "0.13"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
