[package]
name = "serde-smile"
version = "0.2.0"
license = "MIT OR Apache-2.0"
description = "A Smile implementation for Serde"
repository = "https://github.com/sfackler/serde-smile"
keywords = ["smile", "serde", "serialization"]
categories = ["encoding"]
exclude = ["jackson"]
edition = "2018"

[dependencies]
itoa = "1"
indexmap = { version = "2", features = ["serde"] }
memchr = "2"
serde = "1"
serde_bytes = "0.11"

[dev-dependencies]
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
